# bigstone_algo

./: .gitignore  CMakeLists.txt  README.md  main.cpp
week1/: NumberTheory.cpp  NumberTheory.h  Pattern.cpp  Pattern.h  combination.cpp  combination.h  permutation.cpp  permutation.h  week1.cpp
week1_pset/: p10808.cpp  p10988.cpp  p1159.cpp  p11655.cpp  p1213.cpp  p1620.cpp  p1629.cpp  p1940.cpp  p2309.cpp  p2559.cpp  p2979.cpp  p3986.cpp  p4375.cpp  p9375.cpp  p9996.cpp
week2/: BFS.cpp  BFS.h  Bangu.cpp  DFS.cpp  DFS.h  week2.cpp
week2_pset/: p1012.cpp  p1068.cpp  p10709.cpp  p1325.cpp  p1436.cpp  p14502.cpp  p17298.cpp  p2178.cpp  p2468.cpp  p2583.cpp  p2636.cpp  p2852.cpp  p2870.cpp  p2910.cpp  p3474.cpp  p4659.cpp  p4949.cpp  p9012.cpp
week3/: week3.cpp
week3_pset/: p12851.cpp  p12869.cpp  p13913.cpp  p14497.cpp  p15686.cpp  p16234.cpp  p16637.cpp  p17071.cpp  p2589.cpp  p3197.cpp  p4179.cpp
백준/Bronze/1159. 농구 경기/: 농구 경기.cc
백준/Bronze/11655. ROT13/: ROT13.cc
백준/Gold/1068. 트리/: 트리.cc
백준/Gold/12851. 숨바꼭질 2/: README.md  숨바꼭질 2.cc
백준/Gold/12869. 뮤탈리스크/: README.md  뮤탈리스크.cc
백준/Gold/13913. 숨바꼭질 4/: README.md  숨바꼭질 4.cc
백준/Gold/14502. 연구소/: README.md  연구소.cc
백준/Gold/16234. 인구 이동/: README.md  인구 이동.cc
백준/Gold/17298. 오큰수/: README.md  오큰수.cc
백준/Gold/2589. 보물섬/: 보물섬.cc
백준/Gold/2636. 치즈/: README.md  치즈.cc
백준/Gold/4179. 불！/: README.md  불！.cc
백준/Silver/10709. 기상캐스터/: README.md  기상캐스터.cc
백준/Silver/1325. 효율적인 해킹/: README.md  효율적인 해킹.cc
백준/Silver/1436. 영화감독 숌/: 영화감독 숌.cc
백준/Silver/1620. 나는야 포켓몬 마스터 이다솜/: README.md  나는야 포켓몬 마스터 이다솜.cc
백준/Silver/1940. 주몽/: README.md  주몽.cc
백준/Silver/2468. 안전 영역/: README.md  안전 영역.cc
백준/Silver/2559. 수열/: README.md  수열.cc
백준/Silver/2583. 영역 구하기/: README.md  영역 구하기.cc
백준/Silver/2852. NBA 농구/: NBA 농구.cc  README.md
백준/Silver/2870. 수학숙제/: README.md  수학숙제.cc
백준/Silver/2910. 빈도 정렬/: 빈도 정렬.cc
백준/Silver/3474. 교수가 된 현우/: 교수가 된 현우.cc
백준/Silver/3986. 좋은 단어/: 좋은 단어.cc
백준/Silver/4375. 1/: 1.cc
백준/Silver/4659. 비밀번호 발음하기/: 비밀번호 발음하기.cc
백준/Silver/4949. 균형잡힌 세상/: README.md  균형잡힌 세상.cc
백준/Silver/9012. 괄호/: 괄호.cc
백준/Silver/9375. 패션왕 신해빈/: 패션왕 신해빈.cc
백준/Silver/9996. 한국이 그리울 땐 서버에 접속하지/: README.md  한국이 그리울 땐 서버에 접속하지.cc
프로그래머스/lv1/131705. 삼총사/: README.md  삼총사.cpp
프로그래머스/lv2/42842. 카펫/: 카펫.cpp
(+15 files in other folders)
