cmake_minimum_required(VERSION 3.23)
project(bigstone)

set(CMAKE_CXX_STANDARD 14)

#add_executable(bigstone)
#add_executable(bigstone week1/week1.cpp week1/permutation.cpp week1/permutation.h week1/combination.cpp week1/combination.h week1/NumberTheory.cpp week1/NumberTheory.h week1/Pattern.cpp week1/Pattern.h)
#add_executable(bigstone week1_pset/p2309.cpp)
#add_executable(bigstone week1_pset/p10808.cpp)
#add_executable(bigstone week1_pset/p2979.cpp)
#add_executable(bigstone week1_pset/p10988.cpp)
#add_executable(bigstone week1_pset/p1159.cpp)
#add_executable(bigstone week1_pset/p11655.cpp)
#add_executable(bigstone week1_pset/p9996.cpp)
#add_executable(bigstone week1_pset/p2559.cpp)
#add_executable(bigstone week1_pset/p1620.cpp)
#add_executable(bigstone week1_pset/p9375.cpp)
#add_executable(bigstone week1_pset/p1213.cpp)
#add_executable(bigstone week1_pset/p1940.cpp)
#add_executable(bigstone week1_pset/p3986.cpp)
#add_executable(bigstone week1_pset/p1629.cpp)
#add_executable(bigstone week1_pset/p4375.cpp)
#add_executable(bigstone week2/week2.cpp week2/DFS.cpp week2/DFS.h week2/BFS.cpp)
#add_executable(bigstone week2/Bangu.cpp)
#add_executable(bigstone week2_pset/p2178.cpp)
#add_executable(bigstone week2_pset/p1012.cpp)
#add_executable(bigstone week2_pset/p2468.cpp)
#add_executable(bigstone week2_pset/p2583.cpp)
#add_executable(bigstone week2_pset/p2910.cpp)
#add_executable(bigstone week2_pset/p4659.cpp)
#add_executable(bigstone week2_pset/p2870.cpp)
#add_executable(bigstone week2_pset/p10709.cpp)
#add_executable(bigstone week2_pset/p3474.cpp)
#add_executable(bigstone week2_pset/p2852.cpp)
#add_executable(bigstone week2_pset/p1436.cpp)
#add_executable(bigstone week2_pset/p9012.cpp)
#add_executable(bigstone week2_pset/p4949.cpp)
#add_executable(bigstone week2_pset/p14502.cpp)
#add_executable(bigstone week2_pset/p2636.cpp)
#add_executable(bigstone week2_pset/p1068.cpp)
#add_executable(bigstone week2_pset/p1325.cpp)
#add_executable(bigstone week2_pset/p17298.cpp)
#add_executable(bigstone week3/week3.cpp)
#add_executable(bigstone week3_pset/p15686.cpp)
#add_executable(bigstone week3_pset/p2589.cpp)
add_executable(bigstone week3_pset/p16234.cpp)
